bug: edited z-index ofsearch/sort btns, they no longer display on top of modal

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -232,3 +232,7 @@ li {
 .parallax-container {
   height: 300px; 
 }
+
+.waves-effect {
+  z-index: 0 !important;
+}
